# VLA-LEGO_Project

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  apptainer.def  pyproject.toml  weaknesses.md
.github/workflows/: cd.yml  ci-cd.yml  ci.yml
configs/: config.yaml  tracking.yaml
configs/cluster/: gilbreth.yaml  local.yaml
configs/data/: default.yaml
configs/deepspeed/: zero1.json  zero1_fp16.json
configs/logging/: wandb.yaml
configs/model/: action_head.yaml  base.yaml  large.yaml  vla.yaml  vla_dev.yaml  vlm.yaml  vlm_dev.yaml
configs/sim/: default.yaml  lego.yaml
configs/trainer/: debug.yaml  default.yaml
data/: __init__.py  dataset.py  loader.py
docs/: contact-tuning-notes.md  eo1-reference.md  git-workflow.md  kinematics-validation-report.md  phase1.1-assessment.md  phase3.1-3.2-report.md  phase3.1-gpu-validation.md  press-fit-spec.md  setup-mujoco.md  structure_migration_report.md  viewer-debug-checklist.md
docs/cluster/: gilbreth-training-guide.md
docs/roadmap/: phase0.2.md  phase1.1.md  phase1.2.md  phase2.1.md  phase2.2.md  phase2.3.md  phase3.1.md  phase3.2.md  phase4.1.md  phase4.2.md
eval/: __init__.py  evaluate.py
infra/gilbreth/: README.md
models/: __init__.py  action_head.py  losses.py  transformer.py  utils.py  vla_model.py  vlm_backbone.py
scripts/: apptainer-run.sh  container-entrypoint.sh  docker-run.sh  generate_phase11_artifacts.py  generate_phase12_artifacts.py  profile_vlm_memory.py  sweep_lego_physics.py  validate_action_head.py  validate_action_space.py  validate_alex_model.py  validate_assets.py  validate_cameras.py  validate_configs.py  validate_episode_manager.py  validate_kinematics.py  validate_lego_baseplate.py  validate_lego_bricks.py  validate_lego_contacts.py  validate_lego_task.py  validate_mujoco.py  validate_offscreen.py  validate_robot_state.py  validate_sim_smoke.py  validate_vlm_backbone.py
sim/: __init__.py  action_space.py  asset_linter.py  asset_linter_cli.py  asset_loader.py  camera.py  control.py  end_effector.py  env_meta.py  mujoco_env.py  offscreen.py  robot_state.py  sim_runner.py  viewer.py
sim/lego/: __init__.py  baseplate_generator.py  brick_generator.py  cli.py  (+9 more)
tests/: conftest.py  test_action_head.py  test_action_space.py  test_alex_model.py  test_asset_loader.py  test_cameras.py  test_configs.py  test_data.py  test_episode_manager.py  test_ezgripper.py  test_lego_baseplate.py  test_lego_bricks.py  test_lego_contacts.py  test_lego_task.py  test_losses.py  test_models.py  test_mujoco.py  test_offscreen.py  test_robot_state.py  test_sim_smoke.py  test_viewer.py  test_vla_model.py  test_vlm_backbone.py
tracking/: README.md  __init__.py  experiment.py  gpu_monitor.py  metadata.py  metrics.py  naming.py
train/: __init__.py  trainer.py
(+23 files in other folders)
